--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "chart.js": "^4.4.2",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.26.4",
+    "rechart": "^0.0.1",
+    "recharts": "^2.12.7",
+    "saas": "^1.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
