--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^18.3.7",
     "chart.js": "^4.4.2",
     "classnames": "^2.5.1",
-    "homepage": "https://github.com/Barsaan/Pomodoro-App",
+    "homepage": "https://barsaan.github.io/Pomodoro-App",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
